--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -26,7 +26,7 @@ menu__settings:
 # Author Settings
 author:
   author__name: Joseph Wood
-  author__avatar: "images/01.jpg"
+  author__avatar: 'images/01.jpg'
   author__bio: I'm a technical trainer that helps employees to become more productive.
 
 
@@ -76,7 +76,7 @@ hero:
   hero__description: I teach people to be more productive
   hero__button__text: Read about my past
   hero__button__link: "/about/"
-  hero__image: "/images/01.jpg"
+  hero__image: "images/01.jpg"
 
 
 #-------------------------------
