--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -26,7 +26,7 @@ menu__settings:
 # Author Settings
 author:
   author__name: Joseph Wood
-  author__avatar: 'images/01.jpg'
+  author__avatar: "images/01.jpg"
   author__bio: I'm a technical trainer that helps employees to become more productive.
 
 
